Fixed compiler warnings when compiling on a newer JDK